[project]
name = "cryptohack"
version = "0.1.0"
description = "Code to play https://cryptohack.org/"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pwntools>=4.15.0",
    "pycryptodome>=3.23.0",
    "setproctitle>=1.3.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
